--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "glightbox": "^3.3.0"
     }
 }
