--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^5.0"
   },
   "dependencies": {
-    "glightbox": "^3.3.0"
+    "glightbox": "^3.3.0",
+    "sweetalert2": "^11.11.0"
   }
 }
